@@ -15,6 +15,7 @@ opsi-winst/opsi-script (4.11.6.12) stable; urgency=low
 
   * osjson: escape chars in jsonAsArrayToStringList
   * osparser: Logging at errorsOccurredSinceMark
+  * osparser: move/rename/symlink/hardlink: no Syntax error on wrong parameters ; fixes #2036
 
 -- Detlef Oertel <d.oertel@uib.de>  Tue, 03 Jan 2017:15:00:00 +0200
 
